# kura

./: .gitignore  LICENSE  README.md  setup.sh
backend/: main.py  pyproject.toml
backend/app/routers/: vision.py
frontend/: app.json  package-lock.json  package.json
